# trigr

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
skills/trigr/: SKILL.md
src/trigr/: cli.py  config.py  models.py  notify.py  plist.py  runner.py  server.py  store.py
tests/: test_cli.py  test_config.py  test_models.py  test_plist.py  test_runner.py  test_server.py  test_store.py
