[project]
name = "trigr"
version = "0.5.2"
description = "Lightweight CLI that compiles task specs into launchd schedules"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.16.0",
    "pydantic>=2.11.0",
    "rich>=14.0.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
trigr = "trigr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.0", "ruff>=0.11.0"]
