[project]
name = "trigr"
version = "1.0.0"
description = "Event system for AI CLI agents"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.16.0",
    "pydantic>=2.11.0",
    "rich>=14.0.0",
    "tomli-w>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "apscheduler>=3.11.0",
    "httpx>=0.28.0",
]

[project.scripts]
trigr = "trigr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.0", "pytest-asyncio>=0.25.0", "ruff>=0.11.0"]
